tests/language_modules/15_qualified_names_calls/valid/current_module_qualified_function_call.vf
module Qualified.Calls

function increment(amount: Integer) returns Integer
is
    return amount + 1
end increment

procedure main()
is
    let total: Integer = Qualified.Calls.increment(1)
    check total = 2
end main

end Qualified.Calls