tests/language_modules/15_qualified_names_calls/invalid_semantics/foreign_qualified_routine.vf
module Qualified.UnknownForeign

procedure main()
is
    let total: Integer = Other.Module.increment(1)
    check total = 2
end main

end Qualified.UnknownForeign